echo_webhook/kubernetes/mutating-webhook-config.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: echo-webhook-cfg
  labels:
    app: echo-webhook
webhooks:
  - name: echo-webhook.cvgw.me
    clientConfig:
      service:
        name: echo-webhook
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNE1Ea3dNekUyTURBd04xb1hEVEk0TURnek1URTJNREF3TjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUtkCjJtZ2ZIVHUyaHhuRnV4T1h5cGVvMEhTaS9NVlVmNW9KYUo5QzZnY212clM1eUQzR2c2T3dQR1IwNHVrWFg1WTkKb2syNmJ6SEtDc0VISEt2UGN1RzdqZkJHYjBBeWl3N2NoQ0ZFdktVY3RUaXlKQTJFeFNScGljTWR4K2NoTzlnSAo0SkVIQTRLZmdT [...]
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - "CREATE"
        resources:
          - "pods"
